--- a/src/NServiceBus.MicrosoftLogging/NServiceBus.MicrosoftLogging.csproj
+++ b/src/NServiceBus.MicrosoftLogging/NServiceBus.MicrosoftLogging.csproj
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net48;net7.0</TargetFrameworks>
+    <TargetFramework>net10.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Polyfill" Version="4.9.0" PrivateAssets="all" />
-    <PackageReference Include="NServiceBus" Version="8.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
-    <PackageReference Include="ProjectDefaults" Version="1.0.109" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" Condition="$(Configuration) == 'Release'" />
+    <PackageReference Include="NServiceBus" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
+    <PackageReference Include="ProjectDefaults" Version="1.0.170" PrivateAssets="all" />
   </ItemGroup>
 </Project>
