--- a/src/NServiceBus.Community.MicrosoftLogging.Hosting/NServiceBus.Community.MicrosoftLogging.Hosting.csproj
+++ b/src/NServiceBus.Community.MicrosoftLogging.Hosting/NServiceBus.Community.MicrosoftLogging.Hosting.csproj
@@ -2,10 +2,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
+    <RootNamespace>NServiceBus.MicrosoftLogging.Hosting</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NServiceBus" Version="10.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.2" />
     <PackageReference Include="ProjectDefaults" Version="1.0.170" PrivateAssets="all" />
+    <ProjectReference Include="..\NServiceBus.Community.MicrosoftLogging\NServiceBus.Community.MicrosoftLogging.csproj" />
   </ItemGroup>
 </Project>
