--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -2,15 +2,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
-    <GenerateProgramFile>false</GenerateProgramFile>
+    <OutputType>Exe</OutputType>
+    <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
   </PropertyGroup>
   <ItemGroup>
+    <Using Include="Xunit" />
+    <Compile Remove="Snippets\ProgramService.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.2" />
-    <PackageReference Include="Xunit" Version="2.9.3" />
-    <PackageReference Include="Verify.Xunit" Version="31.10.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5" PrivateAssets="all" />
+    <PackageReference Include="xunit.v3" Version="1.1.0" />
     <PackageReference Include="MarkdownSnippets.MsBuild" Version="28.0.0-beta.25" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <ProjectReference Include="..\NServiceBus.Community.MicrosoftLogging.Hosting\NServiceBus.Community.MicrosoftLogging.Hosting.csproj" />
     <ProjectReference Include="..\NServiceBus.Community.MicrosoftLogging\NServiceBus.Community.MicrosoftLogging.csproj" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.2" />
