--- a/src/NServiceBus.Community.MicrosoftLogging/NServiceBus.Community.MicrosoftLogging.csproj
+++ b/src/NServiceBus.Community.MicrosoftLogging/NServiceBus.Community.MicrosoftLogging.csproj
@@ -5,8 +5,8 @@
     <RootNamespace>NServiceBus.MicrosoftLogging</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NServiceBus" Version="10.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
-    <PackageReference Include="ProjectDefaults" Version="1.0.170" PrivateAssets="all" />
+    <PackageReference Include="NServiceBus" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+    <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
   </ItemGroup>
 </Project>
