--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -14,6 +14,6 @@
     <PackageVersion Include="NServiceBus.Extensions.Hosting" Version="4.0.0" />
     <PackageVersion Include="ProjectDefaults" Version="1.0.172" />
     <PackageVersion Include="System.ServiceProcess.ServiceController" Version="10.0.3" />
-    <PackageVersion Include="xunit.v3" Version="3.2.2" />
+    <PackageVersion Include="TUnit" Version="1.15.11" />
   </ItemGroup>
 </Project>
